--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.6",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
