--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "metro-react-native-babel-transformer": "^0.76.0",
     "typescript": "~5.3.3"
   }
 }
