--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diabetes-care-app",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "version": "1.0.0",
   "private": true,
   "scripts": {
