--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.6",
-    "react-native-webview": "13.8.6",
-    "stripe": "^18.4.0"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "metro-react-native-babel-transformer": "^0.76.0",
+    "stripe": "^18.4.0",
     "typescript": "~5.3.3"
   }
 }
