--- a/package.json
+++ b/package.json
@@ -2,23 +2,24 @@
   "name": "diabetes-care-app",
   "main": "index.js",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
-    "dev": "EXPO_NO_TELEMETRY=1 expo start --web",
-    "build:web": "expo export --platform web",
-    "lint": "expo lint"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.0",
+    "expo": "~51.0.28",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-web": "^0.19.6"
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "typescript": "~5.3.3"
-  }
+  },
+  "private": true
 }
