--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.57.0",
     "expo": "~51.0.28",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "^17.1.7",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "lucide-react-native": "^0.542.0",
@@ -23,8 +25,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
