--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.57.0",
     "expo": "~51.0.28",
+    "expo-camera": "^16.1.11",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~6.3.1",
     "expo-media-library": "^17.1.7",
