--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.57.0",
-    "expo": "~51.0.28",
+    "expo": "~52.0.30",
     "expo-camera": "^16.1.11",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~6.3.1",
     "expo-media-library": "^17.1.7",
-    "expo-router": "~3.5.23",
+    "expo-router": "~4.0.17",
     "expo-status-bar": "~1.12.1",
+    "expo-constants": "~17.0.3",
+    "expo-device": "~7.0.1",
+    "expo-application": "~6.0.4",
+    "expo-network": "~7.1.0",
+    "expo-battery": "~7.1.0",
+    "expo-haptics": "~13.0.1",
     "lucide-react-native": "^0.542.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
