--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.57.0",
     "expo": "~52.0.30",
+    "expo-application": "~5.9.1",
+    "expo-battery": "~6.0.1",
     "expo-camera": "~15.0.16",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-haptics": "~13.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.5",
+    "expo-network": "~6.0.1",
     "expo-router": "~4.0.17",
     "expo-status-bar": "~1.12.1",
-    "expo-constants": "~16.0.2",
-    "expo-device": "~6.0.2",
-    "expo-application": "~5.9.1",
-    "expo-network": "~6.0.1",
-    "expo-battery": "~6.0.1",
-    "expo-haptics": "~13.0.1",
     "lucide-react-native": "^0.542.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "nativewind": "^4.2.1",
     "typescript": "~5.3.3"
   },
   "private": true
