--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "^19.1.13",
+    "@types/react-native": "^0.73.0",
     "nativewind": "^4.2.1",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.3.3"
