--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/metro-config": "^54.0.3",
     "@types/react": "^19.1.13",
     "@types/react-native": "^0.73.0",
+    "metro": "^0.83.1",
     "nativewind": "^2.0.11",
     "tailwindcss": "^3.4.4",
     "typescript": "~5.3.3"
