--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@expo/metro-config": "^54.0.3",
     "@types/react": "^19.1.13",
     "@types/react-native": "^0.73.0",
-    "metro": "^0.83.1",
+    "metro": "0.82.1",
     "nativewind": "^2.0.11",
     "tailwindcss": "^3.4.4",
     "typescript": "~5.3.3"
