--- a/package.json
+++ b/package.json
@@ -37,10 +37,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/metro-config": "^54.0.3",
+    "@expo/metro-config": "0.18.11",
     "@types/react": "^19.1.13",
     "@types/react-native": "^0.73.0",
-    "metro": "0.82.1",
+    "metro": "0.80.12",
+    "metro-cache": "0.80.12",
+    "metro-config": "0.80.12",
+    "metro-core": "0.80.12",
+    "metro-resolver": "0.80.12",
+    "metro-runtime": "0.80.12",
     "nativewind": "^2.0.11",
     "tailwindcss": "^3.4.4",
     "typescript": "~5.3.3"
