--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@expo/metro-config": "^0.18.0",
     "@types/react": "^19.1.13",
     "@types/react-native": "^0.73.0",
-    "metro": "^0.80.0",
+    "metro": "^0.80.0"
   },
   "private": true
 }
