--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/metro-config": "^0.17.7",
+    "@expo/metro-config": "~0.18.11",
     "@types/react": "^19.1.13",
     "@types/react-native": "^0.73.0",
-    "metro": "^0.80.9"
+    "metro": "~0.81.0"
   },
   "private": true
 }
