--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@expo/metro-config": "~0.18.11",
     "@types/react": "^19.1.13",
     "@types/react-native": "^0.73.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "metro": "~0.81.0"
   },
   "private": true
