--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-battery": "~6.0.1",
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "^6.0.12",
     "expo-device": "~6.0.2",
     "expo-haptics": "~13.0.1",
     "expo-image-picker": "~15.0.7",
