--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "start": "expo start",
     "dev": "expo start",
+    "web": "expo start --web",
+    "tunnel": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "reset-cache": "expo start --clear"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
