--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "reset-cache": "expo start --clear"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.57.0",
     "expo": "~53.0.0",
@@ -21,6 +23,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^6.0.12",
     "expo-device": "~6.0.2",
+    "expo-font": "^14.0.8",
     "expo-haptics": "~13.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
