--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-application": "~5.9.1",
     "expo-battery": "~6.0.1",
     "expo-camera": "~15.0.16",
+    "expo-clipboard": "~6.0.0",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^6.0.12",
     "expo-device": "~6.0.2",
