--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "tunnel": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "reset-cache": "expo start --clear"
+    "reset-cache": "expo start --clear",
+    "build": "expo export --platform web"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@stripe/stripe-js": "^4.0.0",
     "@supabase/supabase-js": "^2.57.0",
     "expo": "~53.0.0",
     "expo-application": "~5.9.1",
@@ -30,7 +32,10 @@
     "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.5",
     "expo-network": "~6.0.1",
+    "expo-notifications": "~0.28.1",
+    "expo-print": "~13.0.1",
     "expo-router": "~4.0.17",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~1.12.1",
     "lucide-react-native": "^0.542.0",
@@ -49,7 +54,8 @@
     "@types/react": "^19.1.13",
     "@types/react-native": "^0.73.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "metro": "~0.81.0"
+    "metro": "~0.81.0",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
