--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,12 @@ EXPO_PUBLIC_USDA_API_KEY=your_usda_api_key_here
 EXPO_PUBLIC_NUTRITIONIX_APP_ID=your_nutritionix_app_id_here
 EXPO_PUBLIC_NUTRITIONIX_APP_KEY=your_nutritionix_app_key_here
 
+# Dexcom CGM Integration
+EXPO_PUBLIC_DEXCOM_CLIENT_ID=your_dexcom_client_id_here
+EXPO_PUBLIC_DEXCOM_CLIENT_SECRET=your_dexcom_client_secret_here
+EXPO_PUBLIC_DEXCOM_REDIRECT_URI=your_app_url/dexcom/callback
+EXPO_PUBLIC_DEXCOM_USE_SANDBOX=true
+
 # App Configuration
 EXPO_PUBLIC_APP_URL=http://localhost:8081
 EXPO_PUBLIC_API_URL=http://localhost:8081
