--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,13 @@ EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
 STRIPE_SECRET_KEY=your_stripe_secret_key_here
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
 
+# Stripe Price IDs (create these in Stripe Dashboard)
+EXPO_PUBLIC_STRIPE_GOLD_MONTHLY_PRICE_ID=price_xxx
+EXPO_PUBLIC_STRIPE_DIAMOND_MONTHLY_PRICE_ID=price_xxx
+EXPO_PUBLIC_STRIPE_DIAMOND_YEARLY_FIRST_PRICE_ID=price_xxx
+EXPO_PUBLIC_STRIPE_DIAMOND_YEARLY_RENEWAL_PRICE_ID=price_xxx
+EXPO_PUBLIC_STRIPE_FAMILY_MONTHLY_PRICE_ID=price_xxx
+
 # AI API Keys (use one or both)
 EXPO_PUBLIC_ANTHROPIC_API_KEY=your_anthropic_api_key_here
 EXPO_PUBLIC_OPENAI_API_KEY=your_openai_api_key_here
