--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "11.3.1",
     "@stripe/stripe-js": "^4.0.0",
     "@supabase/supabase-js": "^2.57.0",
     "expo": "~53.0.0",
